<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/blur13"
    >


    <pl.droidsonroids.gif.GifImageView
        android:layout_width="275dp"
        android:layout_height="92dp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:src="@drawable/welcome">

    </pl.droidsonroids.gif.GifImageView>

    <EditText
        android:id="@+id/username_edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="50sp"
        android:layout_marginTop="80sp"
        android:layout_marginEnd="50sp"
        android:ems="10"
        android:hint="@string/username_hint"
        style="@style/WhiteText"
        />

    <EditText
        android:id="@+id/password_edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="50sp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        style="@style/WhiteText"
        android:lines="1">

    </EditText>

    <EditText
        android:id="@+id/country_edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="50sp"
        android:hint="@string/country_hint"
        style="@style/WhiteText"
        >

    </EditText>

    <EditText
        android:id="@+id/gender_edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="50sp"
        android:hint="@string/gender_hint"
        style="@style/WhiteText"
        >
    </EditText>

    <EditText
        android:id="@+id/phone_edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="50sp"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        style="@style/WhiteText"
        >
    </EditText>

    <Button
        android:id="@+id/button_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:text="@string/button"
        android:textColor="@color/colorWhite"


        >

    </Button>

</LinearLayout>